--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           document.head.appendChild(meta);
         }
       } catch (e) {
-        console.error('Error injecting smart banner:', e);
+        console.error('Error autocomplete smart banner:', e);
       }
     })();
   </script>
@@ -84,6 +84,7 @@
         -webkit-backdrop-filter: blur(60px) saturate(210%);
         border-right: 1px solid rgba(255, 255, 255, 0.15);
         color: white;
+        transition: width 0.4s cubic-bezier(0.16, 1, 0.3, 1);
     }
 
     .sidebar-item-active {
@@ -145,15 +146,18 @@
         box-shadow: 0 4px 24px rgba(0, 122, 255, 0.05);
     }
 
+    .main-container {
+        transition: padding-left 0.4s cubic-bezier(0.16, 1, 0.3, 1);
+    }
+
     @media (max-width: 1024px) {
         .sidebar-desktop { display: none; }
-        .main-container { padding-left: 0; }
+        .main-container { padding-left: 0 !important; }
         .mobile-nav { display: flex; }
     }
     @media (min-width: 1025px) {
         .mobile-nav { display: none; }
         .sidebar-desktop { display: flex; }
-        .main-container { padding-left: 300px; }
     }
   </style>
 
@@ -278,17 +282,29 @@
         );
     }
 
-    const Sidebar = ({ activeTab, onTabChange, searchTerm, onSearchChange }) => {
+    const Sidebar = ({ activeTab, onTabChange, searchTerm, onSearchChange, isCollapsed, onToggle }) => {
         return (
-            <div className="sidebar-desktop fixed left-0 top-0 h-full w-[300px] flex-col p-6 glass-sidebar z-50">
-                <div className="mb-8 flex items-center gap-2 px-2">
-                    <div className="w-8 h-8 rounded-xl bg-blue-600 flex items-center justify-center text-white shadow-lg">
-                        <svg className="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.1 2.48-1.34.03-1.77-.79-3.29-.79-1.53 0-1.99.77-3.28.82-1.32.05-2.32-1.27-3.15-2.48-1.7-2.45-3-6.93-1.26-9.96.86-1.51 2.43-2.47 4.13-2.5 1.3-.02 2.53.88 3.32.88.79 0 2.27-1.07 3.82-.9 1.55.17 2.7.74 3.52 1.83-3.24 1.85-2.72 6.13.51 7.42-.64 1.6-1.46 3.19-2.31 4.5zM15.98 2.07c.67-.81 1.11-1.93.99-3.06-1.06.04-2.14.71-2.9 1.6-.68.8-1.26 1.94-1.1 3.01 1.18.09 2.15-.65 3.01-1.55z"/></svg>
+            <div 
+                className={`sidebar-desktop fixed left-0 top-0 h-full flex-col p-6 glass-sidebar z-50 overflow-hidden ${isCollapsed ? 'w-[100px]' : 'w-[300px]'}`}
+            >
+                <div className="mb-8 flex items-center justify-between px-2 overflow-hidden">
+                    <div className={`flex items-center gap-2 transition-opacity duration-300 ${isCollapsed ? 'opacity-0' : 'opacity-100'}`}>
+                        <div className="w-8 h-8 rounded-xl bg-blue-600 flex items-center justify-center text-white shadow-lg shrink-0">
+                            <svg className="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.1 2.48-1.34.03-1.77-.79-3.29-.79-1.53 0-1.99.77-3.28.82-1.32.05-2.32-1.27-3.15-2.48-1.7-2.45-3-6.93-1.26-9.96.86-1.51 2.43-2.47 4.13-2.5 1.3-.02 2.53.88 3.32.88.79 0 2.27-1.07 3.82-.9 1.55.17 2.7.74 3.52 1.83-3.24 1.85-2.72 6.13.51 7.42-.64 1.6-1.46 3.19-2.31 4.5zM15.98 2.07c.67-.81 1.11-1.93.99-3.06-1.06.04-2.14.71-2.9 1.6-.68.8-1.26 1.94-1.1 3.01 1.18.09 2.15-.65 3.01-1.55z"/></svg>
+                        </div>
+                        {!isCollapsed && <h1 className="text-xl font-extrabold tracking-tight truncate">App Store</h1>}
                     </div>
-                    <h1 className="text-xl font-extrabold tracking-tight">App Store</h1>
+                    <button 
+                        onClick={onToggle}
+                        className={`p-2 rounded-lg hover:bg-white/10 text-gray-400 transition-all ${isCollapsed ? 'mx-auto' : ''}`}
+                    >
+                        <svg className={`w-6 h-6 transform transition-transform duration-500 ${isCollapsed ? 'rotate-180' : ''}`} fill="none" stroke="currentColor" strokeWidth="2" viewBox="0 0 24 24">
+                            <path strokeLinecap="round" strokeLinejoin="round" d="M11 19l-7-7 7-7M20 19l-7-7 7-7" />
+                        </svg>
+                    </button>
                 </div>
 
-                <div className="mb-8 relative" onClick={() => onTabChange('search')}>
+                <div className={`mb-8 relative transition-all duration-300 ${isCollapsed ? 'opacity-0 scale-95 pointer-events-none' : 'opacity-100 scale-100'}`} onClick={() => onTabChange('search')}>
                     <div className="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
                         <svg className="w-4 h-4 text-gray-400" fill="none" stroke="currentColor" strokeWidth="2" viewBox="0 0 24 24"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
                     </div>
@@ -301,15 +317,15 @@
                     />
                 </div>
 
-                <nav className="space-y-1">
+                <nav className="space-y-2">
                     {CATEGORIES.map(cat => (
                         <button 
                             key={cat.id}
                             onClick={() => onTabChange(cat.id)}
-                            className={`w-full flex items-center gap-3 px-4 py-3 rounded-xl font-semibold text-[15px] transition-all ${activeTab === cat.id ? 'sidebar-item-active shadow-md' : 'text-gray-400 hover:bg-white/5 hover:text-white'}`}
+                            className={`flex items-center gap-4 py-3 rounded-xl font-semibold text-[15px] transition-all overflow-hidden ${activeTab === cat.id ? 'sidebar-item-active shadow-md' : 'text-gray-400 hover:bg-white/5 hover:text-white'} ${isCollapsed ? 'px-4 justify-center w-full' : 'px-4 w-full'}`}
                         >
-                            <span className={activeTab === cat.id ? 'text-blue-500' : 'text-gray-500'}>{cat.icon}</span>
-                            {cat.title}
+                            <span className={`shrink-0 ${activeTab === cat.id ? 'text-blue-500' : 'text-gray-500'}`}>{cat.icon}</span>
+                            {!isCollapsed && <span className="truncate">{cat.title}</span>}
                         </button>
                     ))}
                 </nav>
@@ -341,6 +357,7 @@
       const [activeTab, setActiveTab] = useState('today');
       const [searchTerm, setSearchTerm] = useState('');
       const [selectedApp, setSelectedApp] = useState(null);
+      const [isSidebarCollapsed, setIsSidebarCollapsed] = useState(false);
       const searchInputRef = useRef(null);
 
       useEffect(() => {
@@ -395,15 +412,17 @@
         <div className="min-h-screen flex flex-col">
           {selectedApp && <SmartBanner app={selectedApp} onClose={handleCloseBanner} />}
           
-          <div className="flex flex-grow">
+          <div className="flex flex-grow relative">
             <Sidebar 
                 activeTab={activeTab} 
                 onTabChange={setActiveTab} 
                 searchTerm={searchTerm}
                 onSearchChange={setSearchTerm}
+                isCollapsed={isSidebarCollapsed}
+                onToggle={() => setIsSidebarCollapsed(!isSidebarCollapsed)}
             />
 
-            <main className="main-container flex-grow min-h-screen px-6 md:px-12 py-10 w-full">
+            <main className="main-container flex-grow min-h-screen px-6 md:px-12 py-10 w-full" style={{ paddingLeft: isSidebarCollapsed ? '100px' : '300px' }}>
                 <div className="max-w-6xl mx-auto">
                     <header className="flex justify-between items-end mb-10">
                         <div>
@@ -460,7 +479,7 @@
                             <>
                                 <div className="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
                                     <div 
-                                        onClick={() => handleAppSelect(CATEGORIES.find(c => c.id === 'apps').apps[3])} 
+                                        onClick={() => handleAppSelect(CATEGORIES.find(c => c.id === 'games').apps[0])} 
                                         className="relative h-[480px] rounded-[32px] overflow-hidden group app-card-shadow cursor-pointer"
                                     >
                                         <img src="https://images.unsplash.com/photo-1614850523296-d8c1af93d400?auto=format&fit=crop&q=80&w=1000" className="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" />
