--- a/index.html
+++ b/index.html
@@ -88,18 +88,6 @@
         transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
     }
 
-    .smart-banner-ui {
-        background: rgba(255, 255, 255, 0.6);
-        backdrop-filter: blur(30px) saturate(200%);
-        -webkit-backdrop-filter: blur(30px) saturate(200%);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-        height: 76px;
-        z-index: 1000;
-        position: sticky;
-        top: 0;
-        width: 100%;
-    }
-
     .app-card-shadow {
         box-shadow: 0 15px 35px -5px rgba(0,0,0,0.05);
         transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
@@ -243,34 +231,6 @@
       return match ? match[1] : null;
     };
 
-    const SmartBanner = ({ app, onClose }) => {
-        if (!app) return null;
-        return (
-            <div className="smart-banner-ui animate-in flex items-center px-6">
-                <div className="flex items-center flex-grow">
-                    <img src={app.icon} className="w-12 h-12 app-icon shadow-md mr-4" />
-                    <div className="flex-grow min-w-0">
-                        <h4 className="font-bold text-[15px] text-gray-900 truncate leading-tight">{app.name}</h4>
-                        <p className="text-[12px] text-gray-500 truncate mt-0.5">{app.subtitle}</p>
-                    </div>
-                </div>
-                <div className="flex items-center gap-3">
-                    <button 
-                        onClick={() => window.open(app.url, '_blank')}
-                        className="p-2 text-blue-500 hover:bg-blue-50 rounded-full transition-colors flex items-center justify-center"
-                    >
-                        <svg className="w-8 h-8" fill="none" stroke="currentColor" strokeWidth="2" viewBox="0 0 24 24">
-                            <path strokeLinecap="round" strokeLinejoin="round" d="M12 15V3m0 0l-3 3m3-3l3 3M5 13v6a2 2 0 002 2h10a2 2 0 002-2v-6"/>
-                        </svg>
-                    </button>
-                    <button onClick={onClose} className="p-2 text-gray-400 hover:text-gray-600 transition-colors">
-                        <svg className="w-5 h-5" fill="none" stroke="currentColor" strokeWidth="2.5" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" d="M6 18L18 6M6 6l12 12"/></svg>
-                    </button>
-                </div>
-            </div>
-        );
-    }
-
     const AppListItem = ({ app, onSelect }) => {
         return (
             <div 
@@ -294,38 +254,11 @@
     const App = () => {
       const [activeTab, setActiveTab] = useState('today');
       const [searchTerm, setSearchTerm] = useState('');
-      const [selectedApp, setSelectedApp] = useState(null);
       const searchInputRef = useRef(null);
 
-      useEffect(() => {
-        const checkParams = () => {
-            const params = new URLSearchParams(window.location.search);
-            const appId = params.get('appId');
-            if (appId) {
-                const allApps = CATEGORIES.flatMap(c => c.apps);
-                const app = allApps.find(a => getAppleId(a.url) === appId);
-                if (app) setSelectedApp(app);
-            }
-        };
-        checkParams();
-        window.addEventListener('popstate', checkParams);
-        return () => window.removeEventListener('popstate', checkParams);
-      }, []);
-
       const handleAppSelect = (app) => {
-          const appleId = getAppleId(app.url);
-          if (appleId) {
-            const newUrl = window.location.pathname + '?appId=' + appleId;
-            window.history.pushState({ path: newUrl }, '', newUrl);
-          }
-          setSelectedApp(app);
-          window.scrollTo({ top: 0, behavior: 'smooth' });
-      };
-
-      const handleCloseBanner = () => {
-          setSelectedApp(null);
-          const newUrl = window.location.pathname;
-          window.history.pushState({ path: newUrl }, '', newUrl);
+          // Open the App Store URL directly to satisfy "show only app store banner" request
+          window.location.href = app.url;
       };
 
       const filteredApps = useMemo(() => {
@@ -342,8 +275,6 @@
 
       return (
         <div className="min-h-screen flex flex-col pb-32">
-          {selectedApp && <SmartBanner app={selectedApp} onClose={handleCloseBanner} />}
-          
           <main className="flex-grow w-full px-5 md:px-10 lg:px-20 py-10 max-w-7xl mx-auto">
             <header className="flex justify-between items-end mb-12">
                 <div className="animate-in" style={{ animationDelay: '0.1s' }}>
